release 1.1 fix compatibility on safari

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ ul {
     list-style: none;
 }
 
+img {
+    height: 100px;
+    width: 100px;
+}
+
 a {
     color: black;
     font-weight: bold;
@@ -26,6 +31,10 @@ a {
     font-size: larger;
     text-shadow: 2px 2px white;
     text-decoration: none;
+    display: inline-block;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #corner-logo {
